--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ nav.abajo {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-image: url(https://th.bing.com/th/id/R.bbe26b997560c3733acaab63886c5752?rik=jkNE7RtiuhdfAQ&riu=http%3a%2f%2fwww.globalsat.tech%2fimg%2fslider%2fimg_11.jpg&ehk=VA00tTtgnrJvy07UKOgCqfDIu6UvB8x%2f4sC4HcqAouM%3d&risl=&pid=ImgRaw&r=0);
+  background-image: url(https://img.freepik.com/foto-gratis/concepto-hombres-negocios-apreton-manos_53876-31214.jpg?w=900&t=st=1693069455~exp=1693070055~hmac=c72c5d67ee3746b91a91fbd0162da4261d16065e0a128f7cfc27c17d566a17e9);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -133,7 +133,7 @@ nav.abajo {
   border-radius: 1rem;
   width: 5rem;
   height: 0.5rem;
-  color: #FFFAEB;
+  color: #fffaeb;
   opacity: 1;
 }
 .Qsomos p {
@@ -147,24 +147,24 @@ nav.abajo {
   align-items: center;
   justify-content: center;
   width: 100%;
-  background-color: #FFFAEB;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 400'%3E%3Cdefs%3E%3CradialGradient id='a' cx='396' cy='281' r='514' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%23FFFFFF'/%3E%3Cstop offset='1' stop-color='%23FFFAEB'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='400' y1='148' x2='400' y2='333'%3E%3Cstop offset='0' stop-color='%230E100F' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%230E100F' stop-opacity='0.5'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='400'/%3E%3Cg fill-opacity='0.05'%3E%3Ccircle fill='url(%23b)' cx='267.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='532.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='400' cy='30' r='300'/%3E%3C/g%3E%3C/svg%3E");
+  background-color: #b6b1a0;
   background-attachment: fixed;
   background-size: cover;
   justify-content: space-evenly;
-  gap: 2rem;
+  gap: 0.1rem;
 }
 .Service .title {
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: none;
+  box-shadow: 4px 4px 8px 2px #333;
+  margin-top: 1rem;
 }
 .Service .title .hr-line-2 {
   color: #000000;
   border: none;
   border-radius: 1rem;
-  width: 5rem;
+  width: 11rem;
   height: 0.5rem;
   opacity: 1;
 }
@@ -173,6 +173,7 @@ nav.abajo {
 }
 .Service div {
   display: flex;
+  background-color: rgb(189, 199, 199);
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -180,6 +181,7 @@ nav.abajo {
   border-radius: 20px;
   box-shadow: 4px 4px 8px 2px #333;
   width: 80%;
+  margin-bottom: 1rem;
 }
 .Service div h2 {
   margin-bottom: 1rem;
@@ -197,8 +199,8 @@ nav.abajo {
   align-items: center;
   justify-content: center;
   width: 100%;
-  margin-top: 2rem;
-  background-color: #5C5C5C;
+  /* margin-top: 2rem; */
+  background-color: #5c5c5c;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpath fill='%23545454' d='M486 705.8c-109.3-21.8-223.4-32.2-335.3-19.4C99.5 692.1 49 703 0 719.8V800h843.8c-115.9-33.2-230.8-68.1-347.6-92.2C492.8 707.1 489.4 706.5 486 705.8z'/%3E%3Cpath fill='%234c4c4c' d='M1600 0H0v719.8c49-16.8 99.5-27.8 150.7-33.5c111.9-12.7 226-2.4 335.3 19.4c3.4 0.7 6.8 1.4 10.2 2c116.8 24 231.7 59 347.6 92.2H1600V0z'/%3E%3Cpath fill='%23434343' d='M478.4 581c3.2 0.8 6.4 1.7 9.5 2.5c196.2 52.5 388.7 133.5 593.5 176.6c174.2 36.6 349.5 29.2 518.6-10.2V0H0v574.9c52.3-17.6 106.5-27.7 161.1-30.9C268.4 537.4 375.7 554.2 478.4 581z'/%3E%3Cpath fill='%233b3b3b' d='M0 0v429.4c55.6-18.4 113.5-27.3 171.4-27.7c102.8-0.8 203.2 22.7 299.3 54.5c3 1 5.9 2 8.9 3c183.6 62 365.7 146.1 562.4 192.1c186.7 43.7 376.3 34.4 557.9-12.6V0H0z'/%3E%3Cpath fill='%23333333' d='M181.8 259.4c98.2 6 191.9 35.2 281.3 72.1c2.8 1.1 5.5 2.3 8.3 3.4c171 71.6 342.7 158.5 531.3 207.7c198.8 51.8 403.4 40.8 597.3-14.8V0H0v283.2C59 263.6 120.6 255.7 181.8 259.4z'/%3E%3Cpath fill='%23292929' d='M1600 0H0v136.3c62.3-20.9 127.7-27.5 192.2-19.2c93.6 12.1 180.5 47.7 263.3 89.6c2.6 1.3 5.1 2.6 7.7 3.9c158.4 81.1 319.7 170.9 500.3 223.2c210.5 61 430.8 49 636.6-16.6V0z'/%3E%3Cpath fill='%231f1f1f' d='M454.9 86.3C600.7 177 751.6 269.3 924.1 325c208.6 67.4 431.3 60.8 637.9-5.3c12.8-4.1 25.4-8.4 38.1-12.9V0H288.1c56 21.3 108.7 50.6 159.7 82C450.2 83.4 452.5 84.9 454.9 86.3z'/%3E%3Cpath fill='%23141414' d='M1600 0H498c118.1 85.8 243.5 164.5 386.8 216.2c191.8 69.2 400 74.7 595 21.1c40.8-11.2 81.1-25.2 120.3-41.7V0z'/%3E%3Cpath fill='%230a0a0a' d='M1397.5 154.8c47.2-10.6 93.6-25.3 138.6-43.8c21.7-8.9 43-18.8 63.9-29.5V0H643.4c62.9 41.7 129.7 78.2 202.1 107.4C1020.4 178.1 1214.2 196.1 1397.5 154.8z'/%3E%3Cpath fill='%23000000' d='M1315.3 72.4c75.3-12.6 148.9-37.1 216.8-72.4h-723C966.8 71 1144.7 101 1315.3 72.4z'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
@@ -207,9 +209,9 @@ nav.abajo {
 .contacto .hr-line {
   border: none;
   border-radius: 1rem;
-  width: 5rem;
+  width: 10rem;
   height: 0.5rem;
-  color: #FFFAEB;
+  color: #fffaeb;
   opacity: 1;
 }
 .contacto p {
@@ -223,18 +225,61 @@ nav.abajo {
   align-items: center;
   justify-content: center;
 }
+.image-button {
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  position: relative;
+  padding-left: 40px; /* Espacio para la imagen */
+}
+
+.image-button::before {
+  content: "";
+  background-image: url("whatsapp_3536445.png"); /* Reemplaza con la ruta de tu imagen */
+  background-size: cover;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  left: 5px; /* Posición ajustable de la imagen */
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+/* Estilos adicionales para resaltar el botón al pasar el mouse */
+.image-button:hover {
+  background-color: #45a049;
+}
+
+#whatsappButton {
+  color: white;
+  width: 200px;
+  font-weight: 700;
+  border-radius: 10px;
+  padding-left: 50px;
+  background-color: #36a139;
+  cursor: pointer;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+#whatsappButton:hover {
+  background-color: #bca706;
+}
 
 footer {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 15%;
+  color: white;
   background-color: #555;
   align-items: center;
   justify-content: space-evenly;
-  font-size: 1.2rem;
+  font-size: 0.7rem;
   font-weight: 600;
-  font-family: "Fasthand";
 }
 footer a {
   color: white;
@@ -315,4 +360,4 @@ footer .colab a:hover {
   .seccion-inicio .obfuscate-section .div-inicio-1 .par-class ul li {
     font-size: 3.4vw;
   }
-}/*# sourceMappingURL=index.css.map */
+} /*# sourceMappingURL=index.css.map */
