--- a/seguros.css
+++ b/seguros.css
@@ -1,25 +1,22 @@
+/* Estilos para la rejilla grid */
 .grid-container {
+  margin-top: 10%;
   display: grid;
-  grid-template-columns: repeat(
-    auto-fit,
-    minmax(150px, 1fr)
-  ); /* Columnas adaptables */
+  grid-template-columns: repeat(7, 1fr); /* Cuatro columnas con igual ancho */
   gap: 10px; /* Espacio entre celdas */
   padding: 10px; /* Espacio alrededor de la rejilla */
-  height: 100vh; /* Toma el 100% del alto de la ventana */
-  justify-content: center; /* Centrar horizontalmente */
-  align-items: center; /* Centrar verticalmente */
 }
 
 /* Estilos para las celdas */
 .grid-item {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #ffffff; /* Color de fondo de las celdas */
   border-radius: 10px;
-  border: 1px solid #ccc; /* Borde de las celdas */
-  padding: 20px; /* Espacio interno */
+  border: 1px solid #6c6565; /* Borde de las celdas */
+  padding: 30px; /* Espacio interno */
   text-align: center; /* Centrar texto en celdas */
 }
 
@@ -36,4 +33,41 @@
     padding: 10px; /* Reduce el espacio interno en tamaños pequeños */
     font-size: 14px; /* Tamaño de fuente más pequeño */
   }
+}
+
+.descripcion h1 {
+  margin-top: 100px;
+  margin-left: 10%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: solid 2px;
+  border-radius: 10px;
+  width: 75%;
+}
+.descripcion p {
+  margin-top: 30px;
+  display: flex;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+body {
+  background-color: #a29e9e;
+}
+
+.video {
+  margin: 10px;
+  text-align: center;
+}
+.textoVideo {
+  margin-top: 10px;
+  text-align: center;
+}
+
+.inicio {
+  margin-top: 50px;
+  text-align: center;
 }
