--- a/index.css
+++ b/index.css
@@ -36,7 +36,9 @@ nav.abajo {
 .navbar .navbar-toggler {
   border: none;
 }
-
+.nav-item {
+  text-shadow: 3px 3px 8px rgb(243, 252, 227);
+}
 .seccion-inicio {
   display: flex;
   align-items: start;
@@ -133,7 +135,7 @@ nav.abajo {
   border-radius: 1rem;
   width: 20rem;
   height: 0.5rem;
-  color: #fffaeb;
+  color: #bd0202;
   opacity: 1;
 }
 .Qsomos p {
@@ -161,7 +163,7 @@ nav.abajo {
   margin-top: 1rem;
 }
 .Service .title .hr-line-2 {
-  color: #000000;
+  color: #bd0202;
   border: none;
   border-radius: 1rem;
   width: 11rem;
@@ -177,7 +179,7 @@ nav.abajo {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
+  padding: 2rem;
   border-radius: 20px;
   box-shadow: 4px 4px 8px 2px #333;
   width: 90%;
@@ -197,7 +199,9 @@ nav.abajo {
   align-items: center; /* Alinea verticalmente */
   max-width: 130px;
 }
-
+.fs-2 {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
 .logo {
   /* margin-left: 20px; Espacio entre el h2 y la imagen */
   max-width: 80px; /* Tamaño máximo de la imagen */
@@ -234,7 +238,7 @@ nav.abajo {
   border-radius: 1rem;
   width: 10rem;
   height: 0.5rem;
-  color: #fffaeb;
+  color: #bd0202;
   opacity: 1;
 }
 .contacto p {
@@ -289,7 +293,7 @@ nav.abajo {
 }
 
 #whatsappButton:hover {
-  background-color: #bca706;
+  background-color: #bd0202;
 }
 
 footer {
