--- a/seguros.css
+++ b/seguros.css
@@ -1,3 +1,9 @@
+body {
+  background: linear-gradient(140deg, #f0f0f0, #333);
+  width: 100%;
+  height: 100vh;
+}
+
 /* Estilos para la rejilla grid */
 .grid-container {
   margin-top: 10%;
@@ -19,14 +25,20 @@
   padding: 30px; /* Espacio interno */
   text-align: center; /* Centrar texto en celdas */
 }
-
+.grid-item:hover {
+  background-color: #bd0202; /* Color de fondo de las celdas */
+}
 /* Estilos para los enlaces dentro de las celdas */
 .grid-item a {
   text-decoration: none; /* Quitar subrayado de los enlaces */
   color: #333; /* Color del texto de los enlaces */
   font-weight: bold;
 }
-
+.grid-item a:hover {
+  background-color: #ffffff;
+  border-radius: 5px;
+  padding: 5px;
+}
 /* Media Query para tamaños de pantalla más pequeños (móviles) */
 @media (max-width: 768px) {
   .grid-item {
@@ -38,24 +50,22 @@
 .descripcion h1 {
   margin-top: 100px;
   margin-left: 10%;
-
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   border: solid 2px;
   border-radius: 10px;
+  box-shadow: 0 0 9px red;
   width: 75%;
 }
 .descripcion p {
+  font-weight: 600;
   margin-top: 30px;
   display: flex;
   margin-left: 10%;
   margin-right: 10%;
-}
-
-body {
-  background-color: #a29e9e;
 }
 
 .video {
