--- a/seguros.css
+++ b/seguros.css
@@ -1,5 +1,6 @@
 body {
   background: linear-gradient(140deg, #f0f0f0, #333);
+  background-size: cover;
   width: 100%;
   height: 100vh;
 }
@@ -39,13 +40,6 @@ body {
   border-radius: 5px;
   padding: 5px;
 }
-/* Media Query para tamaños de pantalla más pequeños (móviles) */
-@media (max-width: 768px) {
-  .grid-item {
-    padding: 10px; /* Reduce el espacio interno en tamaños pequeños */
-    font-size: 14px; /* Tamaño de fuente más pequeño */
-  }
-}
 
 .descripcion h1 {
   margin-top: 100px;
@@ -68,9 +62,20 @@ body {
   margin-right: 10%;
 }
 
+h6 {
+  color: #ffffff;
+  text-decoration: none;
+}
+a {
+  text-decoration: none;
+}
 .video {
   margin: 10px;
   text-align: center;
+}
+
+img {
+  width: 40%;
 }
 .textoVideo {
   margin-top: 10px;
@@ -80,4 +85,34 @@ body {
 .inicio {
   margin-top: 50px;
   text-align: center;
+}
+
+/* Media Query para tamaños de pantalla más pequeños (móviles) */
+@media (max-width: 768px) {
+  .container {
+    width: 100%; /* Ancho completo en dispositivos más pequeños */
+  }
+  .grid-container {
+    grid-template-columns: repeat(
+      2,
+      1fr
+    ); /* Cambia a 2 columnas en dispositivos más pequeños */
+  }
+  .grid-item {
+    padding: 10px; /* Reduce el espacio interno en tamaños pequeños */
+    font-size: 14px; /* Tamaño de fuente más pequeño */
+  }
+  body {
+    background: linear-gradient(90deg, #f0f0f0, #333);
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+  }
+  .descripcion p {
+    font-weight: 600;
+    margin-top: 30px;
+    display: flex;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
 }
