--- a/seguros.css
+++ b/seguros.css
@@ -1,13 +1,14 @@
 body {
-  background: linear-gradient(140deg, #f0f0f0, #333);
+  min-height: 100vh; /* Establece una altura mínima del 100% del viewport */
+  margin: 0;
+  background: linear-gradient(10deg, #f0f0f0, #1f1e1e);
   background-size: cover;
   width: 100%;
-  height: 100vh;
 }
 
 /* Estilos para la rejilla grid */
 .grid-container {
-  margin-top: 10%;
+  margin-top: 3%;
   display: grid;
   grid-template-columns: repeat(7, 1fr); /* Cuatro columnas con igual ancho */
   gap: 10px; /* Espacio entre celdas */
@@ -53,7 +54,7 @@ body {
   border-radius: 10px;
   color: #ffffff;
   background-color: #bd0202;
-  width: 75%;
+  width: 80%;
 }
 .descripcion p {
   font-weight: 600;
@@ -64,8 +65,9 @@ body {
 }
 
 h6 {
-  color: #ffffff;
+  color: #0667f9;
   text-decoration: none;
+  margin-bottom: 15px;
 }
 a {
   text-decoration: none;
